--- a/docker-compose.swarm.yml
+++ b/docker-compose.swarm.yml
@@ -124,7 +124,7 @@ services:
         - "service.name=orders-service"
         - "service.type=api"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8081/actuator/health || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8081/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 3
